--- a/sistema 2/clientes.html
+++ b/sistema 2/clientes.html
@@ -266,6 +266,7 @@
               <table class="table table-striped">
                 <thead>
                   <tr>
+                    <th style="width: 10px">Foto</th>
                     <th>Nome</th>
                     <th>E-mail</th>
                     <th>Telefone</th>
@@ -276,6 +277,7 @@
                 <tbody>
 
                   <tr>
+                    <td><img src="dist/img/user1-128x128.jpg" alt="User Image" class="img-circle img-sm"></td>
                     <td>Fulano</td>
                     <td>fulano@hotmail.com.br</td>
                     <td>xxxx-xxxx</td>
@@ -287,7 +289,7 @@
                   </tr>
 
                   <tr>
-
+                    <td><img src="dist/img/user1-128x128.jpg" alt="User Image" class="img-circle img-sm"></td>
                     <td>Fulano</td>
                     <td>fulano@hotmail.com.br</td>
                     <td>xxxx-xxxx</td>
@@ -299,7 +301,7 @@
                   </tr>
 
                   <tr>
-
+                    <td><img src="dist/img/user1-128x128.jpg" alt="User Image" class="img-circle img-sm"></td>
                     <td>Fulano</td>
                     <td>fulano@hotmail.com.br</td>
                     <td>xxxx-xxxx</td>
@@ -384,6 +386,10 @@
                 <div class="form-group">
                   <label for="cpf">CPF</label>
                   <input type="text" class="form-control" id="cpf" placeholder="Digite o cpf do cliente" name="name">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputFile">Foto</label>
+                    <input type="file" id="exampleInputFile" name="photo">
                 </div>
               <!-- /.box-body -->          
               <div class="box-footer">
